--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "compression": "^1.7.0",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
-    "express": "~4.13.4",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "connect-redis": "^3.1.0",
     "es6-promise": "^3.2.1",
+    "express": "~4.13.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.4",
     "moment": "^2.15.1",
+    "morgan": "~1.7.0",
     "react": "15.3.1",
     "react-dom": "15.2.1",
     "react-redux": "4.4.5",
@@ -26,7 +26,8 @@
     "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
@@ -39,6 +40,9 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "path": "^0.12.7",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
