--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^2.2.4",
     "moment": "^2.15.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.15.0",
     "react": "15.3.1",
     "react-dom": "15.2.1",
     "react-redux": "4.4.5",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.24.1",
